--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">studywithme</string>
+    <string name="app_name">스터디위드미</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
@@ -14,8 +14,8 @@
 
     <string name="login_google">구글로   로그인하기</string>
     <string name="login_kakao">카카오로   로그인하기</string>
-    <string name="login_study">스터드  위드미로    로그인하기</string>
-
+    <string name="login_study">스터드  위드미  회원가입</string>
+    <string name="login_already"><u>이미  회원가입이  되어  있으시다면?</u></string>
 
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
